Added OpenAPI tags
